<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- the web url required relates to the upcoming election   -->

    <data>
        <!-- TO DO: Add data binding node for Voter Info ViewModel -->
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

        <variable
            name="adapterlink"
            type="com.example.android.politicalpreparedness.election.adapter.ElectionListAdapter.ElectionClickListener" />

        <!--        <variable-->
        <!--            name="election"-->
        <!--            type="com.example.android.politicalpreparedness.network.models.Election" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_voter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/main_dims"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="605dp" />

        <!-- TO DO: Add title to toolbar. use app:title-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:title="@{viewModel.selectedVoterInfo.contests.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:layout_constraintTop_toTopOf="parent" />
        <!--            app:title="@{viewModel.selectedVoterInfo.election.name.toString()}" />-->


        <!-- TO DO: Add visual styling -->
        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            app:text="@{viewModel.selectedVoterInfo.election.electionDay.toString()}"
            tools:text="12 November 2055" />


        <!--TO DO: Add visual styling and content
         State header is a text item-->
        <TextView
            android:id="@+id/state_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:text="@{viewModel.selectedVoterInfo.election.name}"
            tools:text="Election Information - Wisconsin Presidential Primary" />
        <!--        android:text="@string/election_information"-->
        <!-- TODO: Add click binding to open web URL
        need to find the urls that relate to elections in this selected state
        The text view is set to Voting Locations, viewmodel handles the link - -  state_header" -->
        <!-- TODO: Add visual styling and content -->


        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> viewModel.votingLocationsClick()}"
            android:text="@string/voter_locations"
            app:layout_constraintBottom_toTopOf="@+id/state_ballot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@+id/state_header"
            tools:text="New York Voting Locations" />

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> viewModel.ballotInformationClick()}"
            android:text="@string/ballot_locations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/state_locations"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            tools:text="Ballot Location uRL" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- TODO: Add visual styling and content -->

        <!-- TODO: Add data binding -->
        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />

        <Button
            android:id="@+id/followbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.followButton()}"
            android:text="@string/follow_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/follow_button" />




        <!--        android.fadeVisible="@{!viewModel.showLoading}"-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>